RESOLVED FIXED200919
ASSERTION FAILED: !s_isInvalidatingStyleWithRuleSets in com.apple.WebCore: WebCore::DocumentRuleSets::collectFeatures const
https://bugs.webkit.org/show_bug.cgi?id=200919
Summary ASSERTION FAILED: !s_isInvalidatingStyleWithRuleSets in com.apple.WebCore: We...
Antti Koivisto
Reported 2019-08-20 05:58:59 PDT
ASSERTION FAILED: !s_isInvalidatingStyleWithRuleSets ./css/DocumentRuleSets.cpp(157) : void WebCore::DocumentRuleSets::collectFeatures() const 1 0x6ccbf2179 WTFCrash 2 0x6d12242ab WTFCrashWithInfo(int, char const*, char const*, int) 3 0x6d32a2007 WebCore::DocumentRuleSets::collectFeatures() const 4 0x6d32a1f26 WebCore::DocumentRuleSets::appendAuthorStyleSheets(WTF::Vector<WTF::RefPtr<WebCore::CSSStyleSheet, WTF::DumbPtrTraits<WebCore::CSSStyleSheet> >, 0ul, WTF::CrashOnOverflow, 16ul> const&, WebCore::MediaQueryEvaluator*, WebCore::InspectorCSSOMWrappers&, WebCore::StyleResolver*) 5 0x6d330c6e9 WebCore::StyleResolver::appendAuthorStyleSheets(WTF::Vector<WTF::RefPtr<WebCore::CSSStyleSheet, WTF::DumbPtrTraits<WebCore::CSSStyleSheet> >, 0ul, WTF::CrashOnOverflow, 16ul> const&) 6 0x6d4b43d19 WebCore::Style::Scope::resolver() 7 0x6d32a3e94 WebCore::ElementRuleCollector::matchAuthorShadowPseudoElementRules(bool, WebCore::StyleResolver::RuleRange&) 8 0x6d32a3987 WebCore::ElementRuleCollector::matchAuthorRules(bool) 9 0x6d4b3ecbc WebCore::Style::Invalidator::invalidateIfNeeded(WebCore::Element&, WebCore::SelectorFilter const*) 10 0x6d4b3c5bc WebCore::Style::Invalidator::invalidateStyleWithMatchElement(WebCore::Element&, WebCore::MatchElement) 11 0x6d4b3cfa1 WebCore::Style::ClassChangeInvalidation::invalidateStyleWithRuleSets() 12 0x6d3543f71 WebCore::Style::ClassChangeInvalidation::ClassChangeInvalidation(WebCore::Element&, WebCore::SpaceSplitString const&, WebCore::SpaceSplitString const&) 13 0x6d352b1bd WebCore::Style::ClassChangeInvalidation::ClassChangeInvalidation(WebCore::Element&, WebCore::SpaceSplitString const&, WebCore::SpaceSplitString const&) 14 0x6d352ac30 WebCore::Element::classAttributeChanged(WTF::AtomString const&) 15 0x6d352a7a3 WebCore::Element::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 16 0x6d368edbc WebCore::StyledElement::attributeChanged(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&, WebCore::Element::AttributeModificationReason) 17 0x6d3535e66 WebCore::Element::didModifyAttribute(WebCore::QualifiedName const&, WTF::AtomString const&, WTF::AtomString const&) 18 0x6d352a357 WebCore::Element::setAttributeInternal(unsigned int, WebCore::QualifiedName const&, WTF::AtomString const&, WebCore::Element::SynchronizationOfLazyAttribute) 19 0x6d3523cc2 WebCore::Element::setAttribute(WebCore::QualifiedName const&, WTF::AtomString const&) 20 0x6d380dc29 WebCore::DOMTokenList::updateAssociatedAttributeFromTokens() 21 0x6d380d906 WebCore::DOMTokenList::toggle(WTF::AtomString const&, WTF::Optional<bool>) 22 0x6d1a2e7d1 WebCore::jsDOMTokenListPrototypeFunctionToggleBody(JSC::ExecState*, WebCore::JSDOMTokenList*, JSC::ThrowScope&) 23 0x6d197eeb0 long long WebCore::IDLOperation<WebCore::JSDOMTokenList>::call<&(WebCore::jsDOMTokenListPrototypeFunctionToggleBody(JSC::ExecState*, WebCore::JSDOMTokenList*, JSC::ThrowScope&)), (WebCore::CastedThisErrorBehavior)0>(JSC::ExecState&, char const*) 24 0x6d197eb9c WebCore::jsDOMTokenListPrototypeFunctionToggle(JSC::ExecState*) 25 0x3c9f9be0116b 26 0x6ccfae230 llint_entry 27 0x6ccfae2d3 llint_entry 28 0x6ccfae230 llint_entry 29 0x6ccfae2d3 llint_entry 30 0x3c9f9bf6e0af 31 0x6ccfae230 llint_entry
Attachments
patch (2.03 KB, patch)
2019-08-20 06:13 PDT, Antti Koivisto
no flags
patch (1.99 KB, patch)
2019-08-21 07:45 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-08-20 06:05:41 PDT
Antti Koivisto
Comment 2 2019-08-20 06:13:26 PDT
Antti Koivisto
Comment 3 2019-08-21 07:45:06 PDT
WebKit Commit Bot
Comment 4 2019-08-21 10:05:53 PDT
Comment on attachment 376876 [details] patch Clearing flags on attachment: 376876 Committed r248945: <https://trac.webkit.org/changeset/248945>
WebKit Commit Bot
Comment 5 2019-08-21 10:05:54 PDT
All reviewed patches have been landed. Closing bug.
youenn fablet
Comment 6 2019-08-22 11:03:03 PDT
*** Bug 200319 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.